@@ -122,6 +122,11 @@
 
 <!-- status -->
 
+<p>
+  The <a href="ChangeLog">list of changes made to this specification</a> is
+  available.
+</p>
+
 <h2 class="no-num no-toc" id="contents">Table of contents</h2>
 
 <!--toc-->
