@@ -140,30 +140,37 @@
    other than as work in progress.
 
   <p>The (<a
-   href="http://lists.w3.org/Archives/Public/www-style/">archived</a>) public
-   mailing list <a
-   href="mailto:www-style@w3.org?Subject=%5Bunknown-shortname%5D%20PUT%20SUBJECT%20HERE">
-   www-style@w3.org</a> (see <a
-   href="http://www.w3.org/Mail/Request">instructions</a>) is preferred for
-   discussion of this specification. When sending e-mail, please put the text
-   “unknown-shortname” in the subject, preferably like this:
+   href="http://lists.w3.org/Archives/Public/public-fx/">archived</a>) public
+   mailing list <a href="mailto:public-fx@w3.org">public-fx@w3.org</a> (see
+   <a href="http://www.w3.org/Mail/Request">instructions</a>) is preferred
+   for discussion of this specification. When sending e-mail, please put the
+   text “unknown-shortname” in the subject, preferably like this:
    “[<!---->unknown-shortname<!---->] <em>…summary of comment…</em>”
 
-  <p>This document was produced by the <a href="/Style/CSS/members">CSS
-   Working Group</a> (part of the <a href="/Style/">Style Activity</a>).
+  <p>This document was produced by the <a
+   href="http://www.w3.org/Style/CSS/members">CSS Working Group</a> (part of
+   the <a href="http://www.w3.org/Style/">Style Activity</a>) and the <a
+   href="http://www.w3.org/Graphics/SVG/">SVG Working Group</a> (part of the
+   <a href="http://www.w3.org/Graphics/">Graphics Activity</a>).
 
-  <p>This document was produced by a group operating under the <a
-   href="/Consortium/Patent-Policy-20040205/">5 February 2004 W3C Patent
-   Policy</a>. W3C maintains a <a href="/2004/01/pp-impl/32061/status"
-   rel=disclosure>public list of any patent disclosures</a> made in
-   connection with the deliverables of the group; that page also includes
+  <p>This document was produced by groups operating under the <a
+   href="http://www.w3.org/Consortium/Patent-Policy-20040205/">5 February
+   2004 W3C Patent Policy</a>. W3C maintains a <a
+   href="http://www.w3.org/2004/01/pp-impl/32061/status"
+   rel=disclosure>public list of any patent disclosures (CSS)</a> and a <a
+   href="http://www.w3.org/2004/01/pp-impl/19480/status"
+   rel=disclosure>public list of any patent disclosures (SVG)</a> made in
+   connection with the deliverables of each group; these pages also include
    instructions for disclosing a patent. An individual who has actual
    knowledge of a patent which the individual believes contains <a
-   href="/Consortium/Patent-Policy-20040205/#def-essential">Essential
+   href="http://www.w3.org/Consortium/Patent-Policy-20040205/#def-essential">Essential
    Claim(s)</a> must disclose the information in accordance with <a
-   href="/Consortium/Patent-Policy-20040205/#sec-Disclosure">section 6 of the
-   W3C Patent Policy</a>.</p>
+   href="http://www.w3.org/Consortium/Patent-Policy-20040205/#sec-Disclosure">section
+   6 of the W3C Patent Policy</a>.</p>
   <!--end-status-->
+
+  <p> The <a href=ChangeLog>list of changes made to this specification</a> is
+   available.
 
   <h2 class="no-num no-toc" id=contents>Table of contents</h2>
   <!--begin-toc-->
