@@ -2,6 +2,9 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2012-06-17  Dirk Schulze  <dschulze@adobe.com>
+- add link to ChangeLog, similar to other specs
+
+2012-06-17  Dirk Schulze  <dschulze@adobe.com>
 
 - edit Makefile to use FXTF status text
 - status of document is generated by W3C server now
